Small improvements (equals, dead code etc.)
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/CPALockator@25099 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c